# jobs-auto-apply

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  config.schema.json  cookies.uplers.example.json  cookies.wellfound.example.json  instructions.md  main.py  plan.md  pyproject.toml  requirements.txt  ruff.toml  tasks.md
data/: naukri_resume_sync.json  purge_state.json
jobs_auto_apply/: __init__.py  answer_suggest.py  application_questions.py  apply_filters.py  apply_runner.py  browser.py  chrome_profile.py  cli.py  config.py  cookies.py  cover_letter.py  drop_keywords.py  embeddings.py  jd.py  job_selection.py  limits.py  llm_answers.py  login.py  memory.py  page_load.py  pending_job_ref.py  pending_questions.py  pending_retry.py  profile_data.py  purge.py  question_groups.py  question_keys.py  rag_answers.py  resume_text.py  resume_upload.py  review.py  role_filter.py  run_issues.py  salary.py  server.py  technical_failures.py  telegram.py  utils.py  whatsapp.py
jobs_auto_apply/answers/: __init__.py  chip_options.py  chips.py  compensation.py  config_answers.py  draft.py  experience.py  fields.py  format_finalize.py  free_tier.py  interactive.py  labels.py  llm_policy.py  location.py  memory_store.py  persist_policy.py  profile_links.py  resolve.py  text.py  validation.py  vector_answer.py  wellfound_dom.py
jobs_auto_apply/ats/: apply.py  detector.py  workday.py
jobs_auto_apply/hirist/: apply.py  auth.py  questions.py  resume.py  resume_sync.py  search.py
jobs_auto_apply/instahyre/: apply.py  auth.py  feeds.py  pipeline.py  search.py
jobs_auto_apply/naukri/: apply.py  auth.py  pipeline.py  questions.py  resume.py  resume_sync.py  search.py
jobs_auto_apply/uplers/: apply.py  auth.py  search.py
jobs_auto_apply/wellfound/: apply.py  auth.py  card.py  company.py  guard.py  jd.py  job_data.py  modal.py  pipeline.py  search.py
ollama/: Modelfile.job-answers  Modelfile.job-verify
profile/: application_facts.yaml  cover_letter_reference.txt  resume_facts.yaml
profile.example/: application_facts.yaml  cover_letter_reference.txt  resume_facts.yaml
scripts/: cleanup_user_memory.py  debug_jd.py  generate_config_schema.py  migrate_memory_to_groups.py  setup_ollama_models.sh  test_single_hirist.py  test_single_naukri.py  test_single_wellfound.py
