[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobs-auto-apply"
version = "0.2.0"
description = "Auto-apply to jobs on Wellfound, Uplers, Naukri, Hirist, and Instahyre with review-first workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "dataclasses-jsonschema>=2.16.0",
]

[project.scripts]
jobs-apply = "jobs_auto_apply.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobs_auto_apply*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

