[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobs-auto-apply"
version = "0.2.0"
description = "Auto-apply to jobs on Wellfound, Uplers, Naukri, Hirist, and Instahyre with review-first workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "dataclasses-jsonschema>=2.16.0",
]

[project.scripts]
jobs-apply = "jobs_auto_apply.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobs_auto_apply*"]

[tool.vulture]
# Suppress vulture false positives. These are referenced indirectly in ways
# static analysis cannot see, so they are NOT dead code:
#   - @main.command / @app.* : Click CLI commands and FastAPI route handlers
#     (registered via decorators, never called by name).
#   - dataclass fields below : populated from YAML config (JsonSchemaMixin) or
#     parsed API/Apollo payloads, so reads happen outside Python attribute access.
#   - create_app_from_env : referenced as a uvicorn import-string factory.
#   - scheduler : set on FastAPI app.state and read via the running app.
#   - embed_documents / embed_query : LangChain Embeddings interface methods
#     called by the FAISS vector store via duck typing.
ignore_decorators = ["@main.command", "@app.*"]
ignore_names = [
    "target_roles",
    "salary_min",
    "salary_currency",
    "include_no_salary",
    "experience_years_min",
    "salary_min_lakhs",
    "min_confidence_rag_agree",
    "rag_agree_input_types",
    "instahyre_apply_workers",
    "min_value",
    "company_url",
    "equity",
    "years_experience_min",
    "location_names",
    "remote",
    "visa_sponsorship",
    "markets",
    "create_app_from_env",
    "scheduler",
    "embed_documents",
    "embed_query",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

